fixed alignment, need to fix the gb appearing when fontsize =0

--- a/assets/css/hoveranim.css
+++ b/assets/css/hoveranim.css
@@ -25,6 +25,9 @@
   --link-color: rgb(165, 165, 165);
   --time: 400ms;
   --bg-small-size: 4px;
+  --padding-top: 2px;
+  --padding-sides: 2px;
+  --padding-bottom: 1px;
   background-color: transparent;
   color: #ffffff;
   transition: color 0.2s ease 0s;
@@ -32,7 +35,7 @@
 }
 
 .link-color {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -57,6 +60,7 @@
 }
 
 .link-static {
+    padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   background-image: linear-gradient(
     transparent 0,
     transparent calc(50% - var(--bg-small-size)),
@@ -68,7 +72,7 @@
 }
 
 .link-color-linux {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -104,7 +108,7 @@
 }
 
 .link-color-web {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -140,7 +144,7 @@
 }
 
 .link-color-js {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -176,7 +180,7 @@
 }
 
 .link-color-edu {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -212,7 +216,7 @@
 }
 
 .link-color-rust {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -248,7 +252,7 @@
 }
 
 .link-color-react {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -284,7 +288,7 @@
 }
 
 .link-color-vue {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -320,7 +324,7 @@
 }
 
 .link-color-py {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -356,7 +360,7 @@
 }
 
 .link-color-cpp {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
@@ -392,7 +396,7 @@
 }
 
 .link-color-projects {
-  padding: 2px 0 1px;
+  padding: var(--padding-top) var(--padding-sides) var(--padding-bottom);
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
